--- a/leader-key/config.json
+++ b/leader-key/config.json
@@ -1,165 +1,165 @@
 {
-  "type" : "group",
   "actions" : [
     {
-      "type" : "application",
       "key" : "t",
       "label" : "terminal",
+      "type" : "application",
       "value" : "/Users/me/Applications/kitty.app"
     },
     {
       "actions" : [
         {
           "key" : "f",
-          "type" : "application",
           "label" : "",
+          "type" : "application",
           "value" : "/Users/me/Applications/Firefox Developer Edition.app"
         },
         {
-          "value" : "/Users/me/Applications/Brave Browser.app",
-          "type" : "application",
+          "key" : "b",
           "label" : "",
-          "key" : "b"
+          "type" : "application",
+          "value" : "/Users/me/Applications/Brave Browser.app"
         },
         {
           "key" : "s",
           "label" : "",
-          "value" : "/Users/me/Applications/Spotify.app",
-          "type" : "application"
+          "type" : "application",
+          "value" : "/Users/me/Applications/Spotify.app"
         },
         {
           "key" : "d",
-          "value" : "/Users/me/Applications/Discord.app",
           "label" : "",
-          "type" : "application"
+          "type" : "application",
+          "value" : "/Users/me/Applications/Discord.app"
         },
         {
-          "label" : "",
-          "value" : "/Users/me/Applications/ChatGPT.app",
           "key" : "c",
-          "type" : "application"
+          "label" : "",
+          "type" : "application",
+          "value" : "/Users/me/Applications/ChatGPT.app"
         },
         {
           "key" : "y",
-          "value" : "/Users/me/Applications/YouTube Music.app",
+          "label" : "",
           "type" : "application",
-          "label" : ""
+          "value" : "/Users/me/Applications/YouTube Music.app"
         }
       ],
-      "type" : "group",
+      "key" : "o",
       "label" : "open",
-      "key" : "o"
+      "type" : "group"
     },
     {
-      "type" : "group",
-      "label" : "code",
-      "key" : "c",
       "actions" : [
         {
           "key" : "w",
           "label" : "",
-          "value" : "/Users/me/Applications/WebStorm.app",
-          "type" : "application"
-        },
-        {
           "type" : "application",
-          "value" : "/Users/me/Applications/Rider.app",
-          "key" : "r",
-          "label" : ""
+          "value" : "/Users/me/Applications/WebStorm.app"
         },
         {
-          "value" : "/Users/me/Applications/GoLand.app",
+          "key" : "r",
+          "label" : "",
+          "type" : "application",
+          "value" : "/Users/me/Applications/Rider.app"
+        },
+        {
           "key" : "g",
           "label" : "",
-          "type" : "application"
+          "type" : "application",
+          "value" : "/Users/me/Applications/GoLand.app"
         },
         {
-          "type" : "application",
-          "value" : "/Users/me/Applications/DataGrip.app",
           "key" : "d",
-          "label" : ""
+          "label" : "",
+          "type" : "application",
+          "value" : "/Users/me/Applications/DataGrip.app"
         }
-      ]
+      ],
+      "key" : "c",
+      "label" : "code",
+      "type" : "group"
     },
     {
-      "label" : "3D printing and stuff",
-      "type" : "group",
-      "key" : "p",
       "actions" : [
         {
-          "value" : "/Users/me/Applications/OrcaSlicer.app",
-          "type" : "application",
           "key" : "s",
-          "label" : ""
+          "label" : "",
+          "type" : "application",
+          "value" : "/Users/me/Applications/OrcaSlicer.app"
         },
         {
           "key" : "o",
-          "type" : "application",
           "label" : "",
+          "type" : "application",
           "value" : "/Users/me/Applications/OctoEverywhere.app"
         },
         {
-          "type" : "application",
+          "key" : "i",
           "label" : "",
-          "value" : "/Users/me/Applications/Inkscape.app",
-          "key" : "i"
+          "type" : "application",
+          "value" : "/Users/me/Applications/Inkscape.app"
         },
         {
-          "value" : "/Users/me/Applications/FreeCAD.app",
-          "label" : "",
           "key" : "s",
-          "type" : "application"
+          "label" : "",
+          "type" : "application",
+          "value" : "/Users/me/Applications/FreeCAD.app"
         }
-      ]
+      ],
+      "key" : "p",
+      "label" : "3D printing and stuff",
+      "type" : "group"
     },
     {
+      "key" : "f",
       "label" : "finder",
       "type" : "application",
-      "value" : "/System/Library/CoreServices/Finder.app",
-      "key" : "f"
+      "value" : "/System/Library/CoreServices/Finder.app"
     },
     {
-      "key" : "w",
-      "label" : "work",
-      "type" : "group",
       "actions" : [
         {
-          "type" : "application",
-          "value" : "/Applications/Microsoft Teams.app",
           "key" : "t",
-          "label" : ""
+          "label" : "",
+          "type" : "application",
+          "value" : "/Applications/Microsoft Teams.app"
         },
         {
-          "value" : "/Applications/Microsoft Outlook.app",
-          "label" : "",
           "key" : "m",
-          "type" : "application"
+          "label" : "",
+          "type" : "application",
+          "value" : "/Applications/Microsoft Outlook.app"
         }
-      ]
+      ],
+      "key" : "w",
+      "label" : "work",
+      "type" : "group"
     },
     {
-      "type" : "application",
-      "value" : "/Users/me/Applications/Brave Browser.app",
+      "key" : "b",
       "label" : "",
-      "key" : "b"
+      "type" : "application",
+      "value" : "/Users/me/Applications/Brave Browser.app"
     },
     {
       "key" : "z",
       "label" : "",
       "type" : "application",
-      "value" : "/Users/me/Applications/Zen Browser.app"
+      "value" : "/Users/me/Applications/Zen.app"
     },
     {
-      "type" : "application",
       "key" : "k",
-      "value" : "/Users/me/Applications/KeePassXC.app",
-      "label" : ""
+      "label" : "",
+      "type" : "application",
+      "value" : "/Users/me/Applications/KeePassXC.app"
     },
     {
       "key" : "p",
       "label" : "",
-      "value" : "/Users/me/Applications/1Password.app",
-      "type" : "application"
+      "type" : "application",
+      "value" : "/Users/me/Applications/1Password.app"
     }
-  ]
+  ],
+  "type" : "group"
 }
